Fix: update gitignore v2

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,33 @@
-.deprecated.py
 .cache
-.backburner.txt
+.checkpoints
 
 .wsl
 
 visualize
 preliminaries
 
-
-deprecated
 debug
 
-data/CADICA/nonselectedVideos
-data/CADICA/selectedVideos
+data/CADICA/*
+!data/CADICA/.gitkeep
 
-data/DANILOV/dataset
-data/DANILOV/video_test
-data/DANILOV/video_val
-data/DANILOV/timing_test.xlsx
-data/DANILOV/timing_val.xlsx
-data/DANILOV/test_labels.csv
-data/DANILOV/train_labels.csv
-
-models/stage2_deprecated
+data/DANILOV/*
+!data/DANILOV/.gitkeep
 
 logs/*
 !logs/.gitkeep
 
 model_checkpoints/*
 !model_checkpoints/.gitkeep
+
+results/*
+!results/.gitkeep
+
+weights/*
+!weights/.gitkeep
+
+checkpoints/*
+!checkpoints/.gitkeep
 
 
 # Byte-compiled / optimized / DLL files
